# DesktopAIPet

./: .gitignore  AiClient.cpp  CMakeLists.txt  ChatPanel.cpp  DesktopAIPet.cpp  DesktopAIPet.h  DeviceAgent.cpp  DeviceAgent.h  DeviceCard.cpp  DeviceCard.h  MotorAgent.cpp  MotorAgent.h  PetWidget.cpp  README.md  SensorAgent.h  icon.rc  main.cpp  sensoragent.cpp
assets/: generate_icon.py  resize_gifs.py
src/business/: AiClient.cpp  AiClient.h  DeviceAgent.cpp  DeviceAgent.h  MotorAgent.cpp  MotorAgent.h  SensorAgent.cpp  SensorAgent.h  TcpAgent.cpp  TcpAgent.h  TcpMotorAgent.cpp  TcpMotorAgent.h  TcpSensorAgent.cpp  TcpSensorAgent.h  TcpServer.cpp  TcpServer.h
src/ui/: ChatPanel.cpp  ChatPanel.h  DesktopAIPet.cpp  DesktopAIPet.h  DeviceCard.cpp  PetWidget.cpp  PetWidget.h
